@@ -1,5 +1,9 @@
 2008-06-22  Frederic Peters  <fpeters@0d.be>
 
+	* tests/tests.py: define uprint() as jhbuild.main is not imported.
+
+2008-06-22  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/commands/base.py, jhbuild/commands/info.py, 
 	jhbuild/commands/rdepends.py, jhbuild/moduleset.py: made module names
 	entered by the user insensitive to case.  (closes: #538790)
